--- a/EnlightenMe/app/src/main/res/layout/activity_blue_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_blue_buttons.xml
@@ -8,16 +8,16 @@
 
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/MIprev"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:text="7"
+        android:text="Prevention"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button7" />
+        app:layout_constraintTop_toBottomOf="@+id/MIrf" />
 
     <Button
         android:id="@+id/MIov"
@@ -44,64 +44,65 @@
         app:layout_constraintTop_toBottomOf="@+id/MIov" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/MIdoc"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:text="4"
+        android:text="When to see a doctor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MIcuz" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/MIhelpL"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:text="5"
+        android:text="Helping a loved one"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button5" />
+        app:layout_constraintTop_toBottomOf="@+id/MIdoc" />
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/MIrf"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:text="6"
+        android:text="Risk factors"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button6" />
+        app:layout_constraintTop_toBottomOf="@+id/MIhelpL" />
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/MImms"
+        android:layout_width="286dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="25dp"
+        android:text="Mild, moderate and severe mental health problems"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/MIcom"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/MIcom"
         android:layout_width="200dp"
         android:layout_height="55dp"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="25dp"
-        android:text="9"
+        android:text="Common mental illnesses"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button10" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
-        android:text="8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+        app:layout_constraintTop_toBottomOf="@+id/MIprev" />
 
     <Button
         android:id="@+id/MIcuz"
