--- a/EnlightenMe/app/src/main/res/layout/activity_pd_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_pd_buttons.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PYSD_symp_avoidance">
+    tools:context=".PD_buttons">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
