--- a/EnlightenMe/app/src/main/res/layout/activity_dep_emergency_help.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_emergency_help.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Dep_emergencyHelp">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="398dp"
+        android:layout_height="714dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/depEmergencyH" />
 </androidx.constraintlayout.widget.ConstraintLayout>
