--- a/EnlightenMe/app/src/main/res/layout/activity_mhrisk_factors.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhrisk_factors.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MHriskFactors">
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="415dp"
+        android:layout_height="678dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/MHrf_ptOne" />
+
+    <Button
+        android:id="@+id/RFnxt"
+        android:layout_width="208dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="24dp"
+        android:text="Next page"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
