--- a/EnlightenMe/app/src/main/res/layout/activity_mh_mms_mhproblems.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mh_mms_mhproblems.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MH_mmsMHproblems">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="405dp"
+        android:layout_height="733dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/MHmms" />
 </androidx.constraintlayout.widget.ConstraintLayout>
