--- a/EnlightenMe/app/src/main/res/layout/activity_mhcauses.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhcauses.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MHcauses">
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="406dp"
+        android:layout_height="730dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/MHcuz" />
 </androidx.constraintlayout.widget.ConstraintLayout>
