--- a/EnlightenMe/app/src/main/res/layout/activity_mhprevention.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhprevention.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MHprevention">
 
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="432dp"
+        android:layout_height="684dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.523"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/MHprev_ptOne" />
+
+    <Button
+        android:id="@+id/MHprevNext"
+        android:layout_width="211dp"
+        android:layout_height="71dp"
+        android:layout_marginBottom="32dp"
+        android:text="Next page"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
