--- a/EnlightenMe/app/src/main/res/layout/activity_mhrisk_factors2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhrisk_factors2.xml
@@ -4,17 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MHoverview">
+    tools:context=".MHriskFactors_2">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="405dp"
-        android:layout_height="729dp"
+        android:id="@+id/imageView8"
+        android:layout_width="420dp"
+        android:layout_height="850dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/MHov" />
+        app:srcCompat="@drawable/MHrf_ptTwo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
