--- a/EnlightenMe/app/src/main/res/layout/activity_dep_overview.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_overview.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Dep_overview">
 
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="401dp"
+        android:layout_height="700dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.161"
+        app:srcCompat="@drawable/depOV" />
 </androidx.constraintlayout.widget.ConstraintLayout>
