--- a/EnlightenMe/app/src/main/res/layout/activity_dep_see_doctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_see_doctor.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Dep_seeDoctor">
 
+    <ImageView
+        android:id="@+id/imageView11"
+        android:layout_width="371dp"
+        android:layout_height="679dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.307"
+        app:srcCompat="@drawable/depDoc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
