--- a/EnlightenMe/app/src/main/res/layout/activity_dep_symp_kid_teen.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_symp_kid_teen.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".Dep_sympKidTeen">
 
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="394dp"
+        android:layout_height="717dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/depKidTeen" />
 </androidx.constraintlayout.widget.ConstraintLayout>
