--- a/EnlightenMe/app/src/main/res/layout/activity_dep_symptoms2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_symptoms2.xml
@@ -4,26 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Dep_symptoms">
+    tools:context=".Dep_symptoms_2">
 
     <ImageView
-        android:id="@+id/imageView15"
-        android:layout_width="371dp"
-        android:layout_height="638dp"
+        android:id="@+id/imageView14"
+        android:layout_width="313dp"
+        android:layout_height="596dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.021"
-        app:srcCompat="@drawable/depSymOne" />
-
-    <Button
-        android:id="@+id/depSymNxt"
-        android:layout_width="205dp"
-        android:layout_height="71dp"
-        android:layout_marginBottom="16dp"
-        android:text="Next page"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintVertical_bias="0.363"
+        app:srcCompat="@drawable/depSymTwo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
