--- a/EnlightenMe/app/src/main/res/layout/activity_gad_overview2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_overview2.xml
@@ -4,26 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GAD_overview">
+    tools:context=".GAD_overview_2">
 
     <ImageView
-        android:id="@+id/imageView18"
-        android:layout_width="362dp"
-        android:layout_height="688dp"
+        android:id="@+id/imageView19"
+        android:layout_width="342dp"
+        android:layout_height="667dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/GADovOne" />
+        app:layout_constraintVertical_bias="0.046"
+        app:srcCompat="@drawable/GADovTwo" />
 
     <Button
-        android:id="@+id/GADovNxt1"
-        android:layout_width="159dp"
-        android:layout_height="58dp"
+        android:id="@+id/GADovNxt2"
+        android:layout_width="153dp"
+        android:layout_height="65dp"
         android:layout_marginBottom="40dp"
-        android:text="Next page"
+        android:text="next page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
