--- a/EnlightenMe/app/src/main/res/layout/activity_gad_see_doctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_see_doctor.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".GAD_seeDoctor">
 
+    <ImageView
+        android:id="@+id/imageView16"
+        android:layout_width="337dp"
+        android:layout_height="684dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.34"
+        app:srcCompat="@drawable/GADdoc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
