--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symp_kid_teen.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symp_kid_teen.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".GAD_sympKidTeen">
 
+    <ImageView
+        android:id="@+id/imageView17"
+        android:layout_width="353dp"
+        android:layout_height="704dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/GADkidTeen" />
 </androidx.constraintlayout.widget.ConstraintLayout>
