--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms.xml
@@ -6,4 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".GAD_symptoms">
 
+    <ImageView
+        android:id="@+id/imageView21"
+        android:layout_width="391dp"
+        android:layout_height="678dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/GADsymOne" />
+
+    <Button
+        android:id="@+id/GADsymNxt1"
+        android:layout_width="138dp"
+        android:layout_height="58dp"
+        android:layout_marginBottom="24dp"
+        android:text="next page"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
