--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms3.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms3.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".GAD_symptoms_3">
 
+    <ImageView
+        android:id="@+id/imageView23"
+        android:layout_width="398dp"
+        android:layout_height="703dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.571"
+        app:srcCompat="@drawable/GADsymThree" />
 </androidx.constraintlayout.widget.ConstraintLayout>
