--- a/EnlightenMe/app/src/main/res/layout/activity_pd_overview.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_pd_overview.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PD_overview">
 
+    <ImageView
+        android:id="@+id/imageView25"
+        android:layout_width="378dp"
+        android:layout_height="696dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2"
+        app:srcCompat="@drawable/PDov" />
 </androidx.constraintlayout.widget.ConstraintLayout>
