--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_see_doctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_see_doctor.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PTSD_seeDoctor">
 
+    <ImageView
+        android:id="@+id/imageView28"
+        android:layout_width="360dp"
+        android:layout_height="688dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.372"
+        app:srcCompat="@drawable/PTSDdoc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
