--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_avoidance.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_avoidance.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PTSD_symp_avoidance">
 
+    <ImageView
+        android:id="@+id/imageView30"
+        android:layout_width="370dp"
+        android:layout_height="537dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.082"
+        app:srcCompat="@drawable/PTSDaviodance" />
 </androidx.constraintlayout.widget.ConstraintLayout>
