--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_intensity.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_intensity.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PTSD_symp_intensity">
 
+    <ImageView
+        android:id="@+id/imageView33"
+        android:layout_width="376dp"
+        android:layout_height="688dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.485"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/PTSDintensity" />
 </androidx.constraintlayout.widget.ConstraintLayout>
