--- a/EnlightenMe/app/src/main/res/layout/activity_dep_symp_kid_teen.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_symp_kid_teen.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/depKidTeen" />
+        app:srcCompat="@drawable/dep_kid_teen" />
 </androidx.constraintlayout.widget.ConstraintLayout>
