--- a/EnlightenMe/app/src/main/res/layout/activity_dep_see_doctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_see_doctor.xml
@@ -15,5 +15,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.307"
-        app:srcCompat="@drawable/depDoc" />
+        app:srcCompat="@drawable/dep_doc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
