--- a/EnlightenMe/app/src/main/res/layout/activity_dep_symptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_symptoms.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.021"
-        app:srcCompat="@drawable/depSymOne" />
+        app:srcCompat="@drawable/dep_sym_one" />
 
     <Button
         android:id="@+id/depSymNxt"
