--- a/EnlightenMe/app/src/main/res/layout/activity_dep_symptoms2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_symptoms2.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.363"
-        app:srcCompat="@drawable/depSymTwo" />
+        app:srcCompat="@drawable/dep_sym_two" />
 </androidx.constraintlayout.widget.ConstraintLayout>
