--- a/EnlightenMe/app/src/main/res/layout/activity_gad_overview.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_overview.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/GADovOne" />
+        app:srcCompat="@drawable/gad_ov_one" />
 
     <Button
         android:id="@+id/GADovNxt1"
