--- a/EnlightenMe/app/src/main/res/layout/activity_gad_overview2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_overview2.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.046"
-        app:srcCompat="@drawable/GADovTwo" />
+        app:srcCompat="@drawable/gad_ov_two" />
 
     <Button
         android:id="@+id/GADovNxt2"
