--- a/EnlightenMe/app/src/main/res/layout/activity_gad_overview3.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_overview3.xml
@@ -14,5 +14,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/GADovThree" />
+        app:srcCompat="@drawable/gad_ov_three" />
 </androidx.constraintlayout.widget.ConstraintLayout>
