--- a/EnlightenMe/app/src/main/res/layout/activity_gad_see_doctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_see_doctor.xml
@@ -15,5 +15,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.34"
-        app:srcCompat="@drawable/GADdoc" />
+        app:srcCompat="@drawable/gad_doc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
