--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symp_kid_teen.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symp_kid_teen.xml
@@ -15,5 +15,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/GADkidTeen" />
+        app:srcCompat="@drawable/gad_kid_teen" />
 </androidx.constraintlayout.widget.ConstraintLayout>
