--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/GADsymOne" />
+        app:srcCompat="@drawable/gad_sym_one" />
 
     <Button
         android:id="@+id/GADsymNxt1"
