--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms2.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.219"
-        app:srcCompat="@drawable/GADsymTwo" />
+        app:srcCompat="@drawable/gad_sym_two" />
 
     <Button
         android:id="@+id/GADsymNxt2"
