--- a/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms3.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_symptoms3.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.571"
-        app:srcCompat="@drawable/GADsymThree" />
+        app:srcCompat="@drawable/gad_sym_three" />
 </androidx.constraintlayout.widget.ConstraintLayout>
