--- a/EnlightenMe/app/src/main/res/layout/activity_mhcauses.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhcauses.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/MHcuz" />
+        app:srcCompat="@drawable/mh_cuz" />
 </androidx.constraintlayout.widget.ConstraintLayout>
