--- a/EnlightenMe/app/src/main/res/layout/activity_mhhelping_aloved_one.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhhelping_aloved_one.xml
@@ -14,5 +14,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/MHhelpL" />
+        app:srcCompat="@drawable/mh_help_l" />
 </androidx.constraintlayout.widget.ConstraintLayout>
