--- a/EnlightenMe/app/src/main/res/layout/activity_mhprevention.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhprevention.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/MHprev_ptOne" />
+        app:srcCompat="@drawable/mh_prev_one" />
 
     <Button
         android:id="@+id/MHprevNext"
