--- a/EnlightenMe/app/src/main/res/layout/activity_mhsymptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhsymptoms.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MHsymptoms">
 
+    <ImageView
+        android:id="@+id/imageView38"
+        android:layout_width="360dp"
+        android:layout_height="686dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.355"
+        app:srcCompat="@drawable/mh_sym" />
 </androidx.constraintlayout.widget.ConstraintLayout>
