--- a/EnlightenMe/app/src/main/res/layout/activity_mhwhen_to_see_adoctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhwhen_to_see_adoctor.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MHwhenToSeeADoctor">
 
+    <ImageView
+        android:id="@+id/imageView39"
+        android:layout_width="393dp"
+        android:layout_height="708dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/mh_doc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
