--- a/EnlightenMe/app/src/main/res/layout/activity_pd_overview.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_pd_overview.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.2"
-        app:srcCompat="@drawable/PDov" />
+        app:srcCompat="@drawable/pd_ov" />
 </androidx.constraintlayout.widget.ConstraintLayout>
