--- a/EnlightenMe/app/src/main/res/layout/activity_pd_see_doctor.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_pd_see_doctor.xml
@@ -14,5 +14,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/PDdoc" />
+        app:srcCompat="@drawable/pd_doc" />
 </androidx.constraintlayout.widget.ConstraintLayout>
