--- a/EnlightenMe/app/src/main/res/layout/activity_pd_symptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_pd_symptoms.xml
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/PDsymOne" />
+        app:srcCompat="@drawable/pd_sym_one" />
 
     <Button
         android:id="@+id/PDsymNxt"
