--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_overview.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_overview.xml
@@ -15,5 +15,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/PTSDov" />
+        app:srcCompat="@drawable/ptsd_ov" />
 </androidx.constraintlayout.widget.ConstraintLayout>
