--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_avoidance.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_avoidance.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.082"
-        app:srcCompat="@drawable/PTSDaviodance" />
+        app:srcCompat="@drawable/ptsd_aviodance" />
 </androidx.constraintlayout.widget.ConstraintLayout>
