--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_chan_think_mood.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symp_chan_think_mood.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/PTSDchanTM" />
+        app:srcCompat="@drawable/ptsd_chan_tm" />
 </androidx.constraintlayout.widget.ConstraintLayout>
