--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symptoms2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symptoms2.xml
@@ -14,5 +14,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/PTSDsymTwo" />
+        app:srcCompat="@drawable/ptsd_sym_two" />
 </androidx.constraintlayout.widget.ConstraintLayout>
