--- a/EnlightenMe/app/src/main/res/layout/activity_blue_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_blue_buttons.xml
@@ -11,11 +11,12 @@
         android:id="@+id/MIprev"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#90E0EF"
         android:text="Prevention"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MIrf" />
 
@@ -23,11 +24,12 @@
         android:id="@+id/MIov"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#90E0EF"
         android:text="Overview of mental illness"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,9 +37,10 @@
         android:id="@+id/MIsym"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#90E0EF"
         android:text="Symtoms"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,9 +50,10 @@
         android:id="@+id/MIdoc"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#90E0EF"
         android:text="When to see a doctor"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,11 +63,12 @@
         android:id="@+id/MIhelpL"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#90E0EF"
         android:text="Helping a loved one"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MIdoc" />
 
@@ -71,11 +76,12 @@
         android:id="@+id/MIrf"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#90E0EF"
         android:text="Risk factors"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MIhelpL" />
 
@@ -83,22 +89,25 @@
         android:id="@+id/MImms"
         android:layout_width="286dp"
         android:layout_height="64dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#90E0EF"
         android:text="Mild, moderate and severe mental health problems"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MIcom"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/MIcom"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#90E0EF"
         android:text="Common mental illnesses"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,9 +117,10 @@
         android:id="@+id/MIcuz"
         android:layout_width="200dp"
         android:layout_height="55dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginTop="15dp"
+        android:backgroundTint="#90E0EF"
         android:text="Causes"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
