--- a/EnlightenMe/app/src/main/res/layout/activity_common_mentalprob_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_common_mentalprob_buttons.xml
@@ -6,12 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".CommonMentalprob_Buttons">
 
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/stars"
+        android:layout_width="766dp"
+        android:layout_height="1084dp"
+        android:src="@drawable/twelve"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.501">
+
+    </pl.droidsonroids.gif.GifImageView>
+
     <Button
         android:id="@+id/dep"
         android:layout_width="270dp"
         android:layout_height="90dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginTop="52dp"
+        android:backgroundTint="#9D4EDD"
         android:text="Depression"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -23,7 +38,7 @@
         android:layout_width="270dp"
         android:layout_height="90dp"
         android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
+        android:backgroundTint="#9D4EDD"
         android:text="Generalised anxiety disorder"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,18 +50,21 @@
         android:layout_height="90dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="70dp"
+        android:backgroundTint="#9D4EDD"
         android:text="Panic disorder"
         app:layout_constraintBottom_toTopOf="@+id/ptsd"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/anx" />
+        app:layout_constraintTop_toBottomOf="@+id/anx"
+        app:layout_constraintVertical_bias="0.076" />
 
     <Button
         android:id="@+id/ptsd"
         android:layout_width="270dp"
         android:layout_height="90dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="108dp"
+        android:backgroundTint="#9D4EDD"
         android:text="Post-traumatic stress disorder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
