--- a/EnlightenMe/app/src/main/res/layout/activity_common_mentalprob_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_common_mentalprob_buttons.xml
@@ -26,8 +26,9 @@
         android:layout_width="270dp"
         android:layout_height="90dp"
         android:layout_marginTop="52dp"
-        android:backgroundTint="#9D4EDD"
+        android:backgroundTint="#00B4D8"
         android:text="Depression"
+        android:textColor="#100101"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +39,9 @@
         android:layout_width="270dp"
         android:layout_height="90dp"
         android:layout_marginTop="70dp"
-        android:backgroundTint="#9D4EDD"
+        android:backgroundTint="#00B4D8"
         android:text="Generalised anxiety disorder"
+        android:textColor="#100101"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dep" />
@@ -50,8 +52,9 @@
         android:layout_height="90dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="70dp"
-        android:backgroundTint="#9D4EDD"
+        android:backgroundTint="#00B4D8"
         android:text="Panic disorder"
+        android:textColor="#100101"
         app:layout_constraintBottom_toTopOf="@+id/ptsd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -64,8 +67,9 @@
         android:layout_width="270dp"
         android:layout_height="90dp"
         android:layout_marginBottom="108dp"
-        android:backgroundTint="#9D4EDD"
+        android:backgroundTint="#00B4D8"
         android:text="Post-traumatic stress disorder"
+        android:textColor="#100101"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
