--- a/EnlightenMe/app/src/main/res/layout/activity_mhprevention.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhprevention.xml
@@ -8,11 +8,10 @@
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="432dp"
-        android:layout_height="684dp"
+        android:layout_width="495dp"
+        android:layout_height="672dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.523"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -20,11 +19,14 @@
 
     <Button
         android:id="@+id/MHprevNext"
-        android:layout_width="211dp"
-        android:layout_height="71dp"
-        android:layout_marginBottom="32dp"
+        android:layout_width="188dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#90E0EF"
         android:text="Next page"
+        android:textColor="#0E0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
