--- a/EnlightenMe/app/src/main/res/layout/activity_gad_overview2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_gad_overview2.xml
@@ -23,7 +23,9 @@
         android:layout_width="153dp"
         android:layout_height="65dp"
         android:layout_marginBottom="40dp"
+        android:backgroundTint="#E4C1F9"
         android:text="next page"
+        android:textColor="#0B0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
