--- a/EnlightenMe/app/src/main/res/layout/activity_mhrisk_factors.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhrisk_factors.xml
@@ -20,12 +20,13 @@
 
     <Button
         android:id="@+id/RFnxt"
-        android:layout_width="208dp"
+        android:layout_width="177dp"
         android:layout_height="51dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#90E0EF"
         android:text="Next page"
+        android:textColor="#0C0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
