--- a/EnlightenMe/app/src/main/res/layout/activity_pd_symptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_pd_symptoms.xml
@@ -23,7 +23,9 @@
         android:layout_width="137dp"
         android:layout_height="44dp"
         android:layout_marginBottom="24dp"
+        android:backgroundTint="#E4C1F9"
         android:text="Next page"
+        android:textColor="#120101"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
