--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_buttons.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".PTSD_buttons">
 
+
     <Button
         android:id="@+id/PTSDov"
         android:layout_width="220dp"
         android:layout_height="80dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="56dp"
         android:text="Overview"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,9 +22,10 @@
         android:id="@+id/PTSDsym"
         android:layout_width="220dp"
         android:layout_height="80dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="72dp"
         android:text="Symptoms"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PTSDov" />
 
@@ -30,12 +33,35 @@
         android:id="@+id/PTSDdoc"
         android:layout_width="220dp"
         android:layout_height="80dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="90dp"
         android:text="When to see a doctor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PTSDsym"
-        app:layout_constraintVertical_bias="0.076" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imageView40"
+        android:layout_width="1381dp"
+        android:layout_height="1813dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/black" />
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/fishbowl"
+        android:layout_width="486dp"
+        android:layout_height="256dp"
+        android:layout_marginBottom="4dp"
+        android:src="@drawable/fishbowl"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </pl.droidsonroids.gif.GifImageView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
