--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symptoms.xml
@@ -22,7 +22,9 @@
         android:layout_width="134dp"
         android:layout_height="56dp"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#E4C1F9"
         android:text="next page"
+        android:textColor="#0C0101"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
