--- a/EnlightenMe/app/src/main/res/layout/activity_mhsymptoms.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_mhsymptoms.xml
@@ -16,5 +16,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.355"
-        app:srcCompat="@drawable/mh_sym" />
+        app:srcCompat="@drawable/mh_sym_2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
