--- a/EnlightenMe/app/src/main/res/layout/activity_main.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="32dp"
         app:layout_constraintBottom_toTopOf="@+id/enlighten"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.58"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
@@ -35,7 +36,7 @@
         android:id="@+id/warning"
         android:layout_width="294dp"
         android:layout_height="243dp"
-        android:layout_marginTop="376dp"
+        android:layout_marginTop="328dp"
         android:text="Warning: the person who made this does not have a degree in mental health. All the information was taken from Mayo clinic. this was made with the intent to help validate and find basic information about mental health."
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,10 +49,10 @@
         android:layout_width="230dp"
         android:layout_height="58dp"
         android:layout_marginTop="23dp"
-        android:background="#52B788"
-        android:backgroundTint="#52B788"
+        android:backgroundTint="#80ED99"
         android:shadowColor="#52B788"
         android:text="I understand and I am ready to start"
+        android:textColor="#190101"
         app:iconTint="#52B788"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
