--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_buttons.xml
@@ -12,6 +12,7 @@
         android:layout_width="220dp"
         android:layout_height="80dp"
         android:layout_marginTop="56dp"
+        android:backgroundTint="#00A5CF"
         android:text="Overview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -23,6 +24,7 @@
         android:layout_width="220dp"
         android:layout_height="80dp"
         android:layout_marginTop="72dp"
+        android:backgroundTint="#00A5CF"
         android:text="Symptoms"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -34,6 +36,7 @@
         android:layout_width="220dp"
         android:layout_height="80dp"
         android:layout_marginTop="90dp"
+        android:backgroundTint="#00A5CF"
         android:text="When to see a doctor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
