--- a/EnlightenMe/app/src/main/res/layout/activity_ptsd_symptoms2.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_ptsd_symptoms2.xml
@@ -8,11 +8,25 @@
 
     <ImageView
         android:id="@+id/imageView35"
-        android:layout_width="385dp"
-        android:layout_height="714dp"
+        android:layout_width="346dp"
+        android:layout_height="601dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.123"
         app:srcCompat="@drawable/ptsd_sym_two" />
+
+    <Button
+        android:id="@+id/PTSDsymNxt2"
+        android:layout_width="131dp"
+        android:layout_height="59dp"
+        android:layout_marginBottom="36dp"
+        android:backgroundTint="#E4C1F9"
+        android:text="next page"
+        android:textColor="#0C0101"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
